<resources>
    <!--Titulo de la aplicación-->
    <string name="app_name">Crazy Layouts</string>

    <!--Strings usados en linearLayout-->

    <!--Strings usados en tableLayout-->

    <!--Strings usados en relativeLayout-->

    <!--Items Menú-->
    <string name="LL">Linear Layout</string>
    <string name="TL">Table Layout</string>
    <string name="GL">Grid Layout</string>

    <!--Edit Texts-->
    <string name="nombre">Nombres</string>
    <string name="Apellidos">Apellidos</string>

    <!--View Texts-->
    <string name="estado">Estado Civil</string>
    <string name="cargo">Cargo</string>

    <!--Listas Spinners-->
    <string-array name="estados">
        <item>Soltero</item>
        <item>Casado</item>
        <item>Separado</item>
        <item>Viudo</item>
    </string-array>

    <string-array name="ocupacion">
        <item>Ventas</item>
        <item>Informatica</item>
        <item>Jardineria</item>
    </string-array>

    <!--Strings usados en gridLayout-->
    <string name="crazy_layout">Crazy Layout</string>
    <string name="menu">⋮</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
    <string name="division">÷</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="multiplicacion">×</string>
    <string name="num3">3</string>
    <string name="num2">2</string>
    <string name="num1">1</string>
    <string name="resta">−</string>
    <string name="punto"> .</string>
    <string name="num0">0</string>
    <string name="igual">=</string>
    <string name="suma">+</string>


    <string name="producto">Producto</string>
    <string name="subtotal">Subtotal</string>
    <string name="art1">Jabon de manos x 1</string>
    <string name="art2">Shampoo Monster x 1</string>
    <string name="art3">Pastas Duria x 2</string>
    <string name="art4">Detergente Limpiadin</string>
    <string name="artP1">$2</string>
    <string name="artP2">$10</string>
    <string name="artP3">$18</string>
    <string name="artP4">$13,4</string>
    <string name="subtotalT">Subtotal</string>
    <string name="costoEnvio">Costo Envio</string>
    <string name="cupon">Cupon</string>
    <string name="total">Total</string>
    <string name="subtotalP">$43,4</string>
    <string name="costoEnvioP">$10</string>
    <string name="cuponP">-$5</string>
    <string name="totalP">$48,4</string>
</resources>