<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TableLayaoutActivity">

    <Button
        android:id="@+id/btnVolver"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:text="Volver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="#D6D7D7"
        android:elevation="2dp"
        android:shadowColor="#5C5C5C"
        android:textColor="#494949"
        android:textSize="16dp"
        android:textStyle="bold"
        app:cornerRadius="5dp"
        app:strokeColor="#d6d7d7"/>


    <TableLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:stretchColumns="0,1,2,3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow>


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/my_toolbar"
                android:layout_span="4"
                android:background="#212121"
                android:elevation="6dp"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:menu="@menu/menu_main"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:title="Crazy Layaouts"
                app:titleTextColor="@color/white" />
        </TableRow>

        <TableRow
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp">


            <TextView
                android:id="@+id/textView"
                android:layout_span="3"
                android:background="#128675"
                android:text="@string/producto"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textView2"
                android:layout_span="1"
                android:background="#128675"
                android:text="@string/subtotal"
                android:textColor="@color/white" />
        </TableRow>

        <TableRow
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingRight="10dp">


            <TextView
                android:id="@+id/textView3"
                android:layout_span="3"
                android:text="@string/art1" />

            <TextView
                android:id="@+id/textView4"
                android:layout_span="1"
                android:text="@string/artP1" />
        </TableRow>

        <TableRow
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingRight="10dp">

            <TextView
                android:id="@+id/textView5"
                android:layout_span="3"
                android:text="@string/art2" />

            <TextView
                android:id="@+id/textView6"
                android:layout_span="1"
                android:text="@string/artP2" />
        </TableRow>

        <TableRow
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingRight="10dp">


            <TextView
                android:id="@+id/textView7"
                android:layout_span="3"
                android:text="@string/art3" />

            <TextView
                android:id="@+id/textView8"
                android:layout_span="1"
                android:text="@string/artP3" />
        </TableRow>

        <TableRow
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingRight="10dp">


            <TextView
                android:id="@+id/textView9"
                android:layout_span="3"
                android:text="@string/art4" />

            <TextView
                android:id="@+id/textView10"
                android:layout_span="1"
                android:text="@string/artP4" />
        </TableRow>

        <TableRow
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingRight="10dp">


            <View
                android:id="@+id/divider"
                android:layout_height="4dp"
                android:layout_span="4"
                android:background="?android:attr/listDivider" />
        </TableRow>

        <TableRow
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingRight="10dp">


            <TextView
                android:id="@+id/textView11"
                android:layout_span="3"
                android:paddingLeft="150dip"
                android:text="@string/subtotalT"
                android:textColor="#128675" />

            <TextView
                android:id="@+id/textView12"
                android:layout_span="1"
                android:text="@string/subtotalP" />
        </TableRow>

        <TableRow
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingRight="10dp">


            <TextView
                android:id="@+id/textView13"
                android:layout_span="3"
                android:paddingLeft="150dip"
                android:text="@string/costoEnvio"
                android:textColor="#128675" />

            <TextView
                android:id="@+id/textView14"
                android:layout_span="1"
                android:text="@string/costoEnvioP" />
        </TableRow>

        <TableRow
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingRight="10dp">


            <TextView
                android:id="@+id/textView15"
                android:layout_span="3"
                android:paddingLeft="150dip"
                android:text="@string/cupon"
                android:textColor="#128675" />

            <TextView
                android:id="@+id/textView16"
                android:layout_span="1"
                android:text="@string/cuponP" />
        </TableRow>

        <TableRow
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingRight="10dp">


            <TextView
                android:id="@+id/textView17"
                android:layout_span="3"
                android:paddingLeft="150dip"
                android:text="@string/total"
                android:textColor="#128675" />

            <TextView
                android:id="@+id/textView18"
                android:layout_span="1"
                android:text="@string/totalP" />
        </TableRow>


    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>