<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alignmentMode="alignBounds"
    android:background="#EEEEEE">

    <Button
        android:id="@+id/btnVolver"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#D6D7D7"
        android:elevation="2dp"
        android:shadowColor="#5C5C5C"
        android:text="Volver"
        android:textColor="#494949"
        android:textSize="16dp"
        android:textStyle="bold"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:strokeColor="#d6d7d7" />

    <androidx.gridlayout.widget.GridLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#212121"
            android:elevation="6dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_columnSpan="4"
            app:layout_rowSpan="1"
            app:menu="@menu/menu_main"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="Crazy Layaouts"
            app:titleTextColor="@color/white" />


        <TextView
            android:id="@+id/num7"
            style="@style/AppTheme.BotonCalculadora.Azul"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:text="@string/num7"
            app:layout_column="0"
            app:layout_columnSpan="1"
            app:layout_row="1"
            app:layout_rowSpan="1" />

        <TextView
            android:id="@+id/num8"
            style="@style/AppTheme.BotonCalculadora.Azul"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:text="@string/num8"
            app:layout_column="1"
            app:layout_row="1" />

        <TextView
            android:id="@+id/num9"
            style="@style/AppTheme.BotonCalculadora.Azul"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:text="@string/num9"
            app:layout_column="2"
            app:layout_row="1" />

        <TextView
            android:id="@+id/division"
            style="@style/AppTheme.BotonCalculadora.Rojo"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:text="@string/division"
            app:layout_column="3"
            app:layout_gravity="fill_horizontal"
            app:layout_row="1" />

        <TextView
            android:id="@+id/num4"
            style="@style/AppTheme.BotonCalculadora.Azul"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:text="@string/num4"
            app:layout_column="0"
            app:layout_row="2" />

        <TextView
            android:id="@+id/num5"
            style="@style/AppTheme.BotonCalculadora.Azul"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:text="@string/num5"
            app:layout_column="1"
            app:layout_row="2" />

        <TextView
            android:id="@+id/num6"
            style="@style/AppTheme.BotonCalculadora.Azul"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:text="@string/num6"
            app:layout_column="2"
            app:layout_row="2" />

        <TextView
            android:id="@+id/multiplicacion"
            style="@style/AppTheme.BotonCalculadora.Rojo"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:text="@string/multiplicacion"
            app:layout_column="3"
            app:layout_gravity="fill_horizontal"
            app:layout_row="2" />

        <TextView
            android:id="@+id/num3"
            style="@style/AppTheme.BotonCalculadora.Azul"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:text="@string/num3"
            app:layout_column="0"
            app:layout_row="3" />

        <TextView
            android:id="@+id/num2"
            style="@style/AppTheme.BotonCalculadora.Azul"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:text="@string/num2"
            app:layout_column="1"
            app:layout_row="3" />

        <TextView
            android:id="@+id/num1"
            style="@style/AppTheme.BotonCalculadora.Azul"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:text="@string/num1"
            app:layout_column="2"
            app:layout_row="3" />

        <TextView
            android:id="@+id/resta"
            style="@style/AppTheme.BotonCalculadora.Rojo"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:text="@string/resta"
            app:layout_column="3"
            app:layout_gravity="fill_horizontal"
            app:layout_row="3" />

        <TextView
            android:id="@+id/punto"
            style="@style/AppTheme.BotonCalculadora.Azul"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:text="@string/punto"
            app:layout_column="0"
            app:layout_row="4" />

        <TextView
            android:id="@+id/num0"
            style="@style/AppTheme.BotonCalculadora.Azul"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:text="@string/num0"
            app:layout_column="1"
            app:layout_row="4" />

        <TextView
            android:id="@+id/igual"
            style="@style/AppTheme.BotonCalculadora.Azul"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:text="@string/igual"
            app:layout_column="2"
            app:layout_row="4" />

        <TextView
            android:id="@+id/suma"
            style="@style/AppTheme.BotonCalculadora.Rojo"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:text="@string/suma"
            app:layout_column="3"
            app:layout_gravity="fill_horizontal"
            app:layout_row="4" />

    </androidx.gridlayout.widget.GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

