<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentTop="true"
            android:background="@color/gris"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:menu="@menu/menu_main"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="@string/app_name"
            app:titleTextColor="@color/white" />

        <EditText
            android:id="@+id/editTextNombre"
            android:layout_width="match_parent"
            android:layout_height="@dimen/alturaComponentesRL"
            android:layout_below="@+id/my_toolbar"
            android:layout_marginHorizontal="@dimen/margenIzDe"
            android:layout_marginTop="16dp"
            android:hint="@string/nombre"
            android:importantForAutofill="no"
            android:inputType="text" />

        <EditText
            android:id="@+id/editTextApellido"
            android:layout_width="match_parent"
            android:layout_height="@dimen/alturaComponentesRL"
            android:layout_below="@+id/editTextNombre"
            android:layout_marginHorizontal="@dimen/margenIzDe"
            android:hint="@string/Apellidos"
            android:importantForAutofill="no"
            android:inputType="text" />

        <TextView
            android:id="@+id/textView_EC"
            android:layout_width="170dp"
            android:layout_height="@dimen/alturaComponentesRL"
            android:layout_below="@+id/editTextApellido"
            android:layout_marginStart="@dimen/margenIzDe"
            android:gravity="bottom"
            android:text="@string/estado"
            android:textColor="@color/material_dynamic_neutral50"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/textView_Ca"
            android:layout_width="match_parent"
            android:layout_height="@dimen/alturaComponentesRL"
            android:layout_below="@+id/editTextApellido"
            android:layout_marginEnd="@dimen/margenIzDe"
            android:layout_toEndOf="@+id/textView_EC"
            android:gravity="bottom"
            android:text="@string/cargo"
            android:textColor="@color/material_dynamic_neutral50"
            android:textSize="19sp" />

        <Spinner
            android:id="@+id/sp1"
            android:layout_width="170sp"
            android:layout_height="@dimen/alturaComponentesRL"
            android:layout_below="@+id/textView_EC"
            android:layout_marginStart="@dimen/margenIzDe" />

        <Spinner
            android:id="@+id/sp2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/alturaComponentesRL"
            android:layout_below="@+id/textView_Ca"
            android:layout_marginEnd="@dimen/margenIzDe"
            android:layout_toEndOf="@+id/sp1" />

    </RelativeLayout>

    <Button
        android:id="@+id/btnVolver"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#D6D7D7"
        android:elevation="2dp"
        android:shadowColor="#5C5C5C"
        android:text="Volver"
        android:textColor="#494949"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:strokeColor="#d6d7d7" />

</androidx.constraintlayout.widget.ConstraintLayout>